--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
 <body>
     <section class="header">
         
-        <h1 style="font-size:2.5em; color:black">ElectroMmerce</h1>
+        <h1 style="font-size:2.5em; color:black">MOBILE</h1>
         <div class="navbar">
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a class="active" href="home.html">Home</a></li>
+                <li><a href="index.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -280,11 +280,11 @@
 
     <section class="company1">
         <div class="container1">
-            <div class="div1"><div>Upto 20% offers on<br> RedMi mobile<br><button class=".button">Explore More</button>
+            <div class="div1"><div>Upto 20% offers on<br> RedMi mobile<br><button class="button">Explore More</button>
             </div></div>
-            <div class="div2">Upto 18% offers on <br>Oppo mobile<br><button class=".button">Explore More</button>
+            <div class="div2">Upto 18% offers on <br>Oppo mobile<br><button class="button">Explore More</button>
             </div>
-            <div class="div3">Upto 15% offers on<br> Moto mobile<br><button class=".button">Explore More</button>
+            <div class="div3">Upto 15% offers on<br> Moto mobile<br><button class="button">Explore More</button>
             </div>
         </div>
     </section>
@@ -332,7 +332,7 @@
                 </ul>
             </div>
         </div>
-        <hr>
+        <hr style="text-align: center;">
         
         <div class="footer_2">
            <span class="special"><ion-icon name="gift-outline"></ion-icon>Gift voucher</span>
